Añadido método para calcular el número de páginas en el paginado y mostrarlo correctamente. Modificado componente home para mostrar bien el paginado y nuevo botón para añadir un juego a favoritos, estilos css para mejorar su visibilidad, modificado html de home para para mostrar bien los botones anterior y siguiente. Añadidos nuevas imagenes de juegos

--- a/Angular/Videogames-TFG-Frontend/src/app/Modules/home/components/home/home.component.scss
+++ b/Angular/Videogames-TFG-Frontend/src/app/Modules/home/components/home/home.component.scss
@@ -34,3 +34,35 @@
   transform: scale(0.98);
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
 }
+
+
+
+
+/* Añadir estos estilos al archivo CSS del componente */
+.toast-body {
+  max-height: 70vh; /* Ajusta la altura máxima según sea necesario */
+  overflow-y: auto;
+}
+
+@media (max-width: 768px) {
+  .toast-body {
+    max-height: 50vh; /* Ajusta la altura máxima para pantallas pequeñas */
+  }
+}
+
+
+/*Estilos para centrar el paginado y que la navegación entre las distintas páginas se muestre como clikclable*/
+.pagination {
+  margin-bottom: 0;
+}
+
+
+.pagination .page-item .page-link {
+  border-color:  #a09e9e;
+  color: #000000;
+}
+
+
+.pagination .page-link {
+  cursor: pointer;
+}
